--- a/sttle.css
+++ b/sttle.css
@@ -1,1 +1,18 @@
+body{
+  background-color: #383D58;
+  color: white;
+}
+.cabeçalho {
+  background-color: #383D58;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 24px 0;
+}
+.cabeçalho-liste-item{
+  display: inline-block;
+  margin: 0 16px;
+  padding: 24px 0;
+  font-size: 24px;
+}
 
